# Stock-App

./: .flake8  README.txt  pyproject.toml
alembic/: env.py
app/: main.py
app/api/: deps.py
app/core/: config.py
app/crud/: crud_user.py
app/db/: base_class.py
app/models/: user.py
backend/: .env  .gitignore  docker-compose.yml  dockerfile
backend/alembic/versions/: ffdbe15441a8_inital.py
backend/app/api/api_v1/: api.py
backend/app/api/api_v1/endpoints/: user.py
backend/app/crud/: base.py
backend/app/db/: session.py
backend/app/schemas/: user.py
backend/app_src/: alembic.ini  prestart.sh  pyproject.toml
backend/app_src/app/: initial_data.py  main.py
backend/app_src/app/api/: deps.py
backend/app_src/app/core/: config.py  security.py
backend/app_src/app/crud/: crud_user.py
backend/app_src/app/db/: init_db.py
backend/app_src/app/schemas/: token.py
backend/app_src/scripts/: format.sh
backend/scripts/: format-imports.sh
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.js  index.jsx  styles.css
frontend/src/components/: 404.jsx  companyNews.jsx  crypto.jsx  home.jsx  login.jsx  logout.jsx  navbar.jsx  personalStocks.jsx  quote.jsx  register.jsx  search.jsx  stock.jsx  websocket.jsx
frontend/src/redux/: actionTypes.js  actions.js  store.js
frontend/src/redux/reducers/: actions.js  currentUser.js  home.js  index.js  search.js
frontend/src/views/: landing.jsx
react-ui/: package-lock.json  package.json
react-ui/src/: App.js
scripts/: lint.sh  test.sh
(+3 files in other folders)
